# engram-ai-rust

./: Cargo.toml  ENGRAM-V2-DESIGN.md  README.md
examples/: basic_usage.rs  ironclaw_integration.rs
src/: config.rs  extractor.rs  lib.rs  main.rs  memory.rs  retrieval.rs  storage.rs  types.rs
src/bus/: alignment.rs  mod.rs  subscriptions.rs
src/models/: actr.rs  consolidation.rs  hebbian.rs  mod.rs
tests/: integration_test.rs  phase3_test.rs  stress_test.rs
